fix: 💄 sticky footer to fully visible
Big map skeleton causing main height to big.

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -58,8 +58,7 @@
   }
 
   .Footer.List {
-    position: sticky;
-    bottom: 10px;
+    bottom: 0;
 
     display: flex;
     align-items: center;
